# linkedin-job-scraper

./: .env.example  .gitignore  Makefile  README.md  TODOS.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
browser/: __init__.py  interceptor.py  manager.py  session.py  stealth.py
config/: __init__.py  constants.py  search_profiles.yaml  settings.py
data/: __init__.py  cleaner.py  deduplicator.py  exporter.py  models.py
db/: __init__.py  database.py  repository.py
monitor/: __init__.py  health.py  logger.py
scraper/: __init__.py  exceptions.py  job_detail.py  job_search.py  parallel.py
scraper/strategies/: api_intercept.py  dom_fallback.py  ld_json.py
server/: app.py
server/routes/: api_jobs.py  api_search.py  pages.py
server/templates/: base.html  index.html  jobs.html  pipeline.html
server/templates/partials/: count_badge.html  job_detail.html  job_row.html
tests/: conftest.py  test_cleaner.py  test_config.py  test_deduplicator.py  test_dom_fallback.py  test_exceptions.py  test_integration.py  test_ld_json.py  test_models.py  test_stealth.py
tui/: app.py
