[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-job-scraper"
version = "1.0.0"
description = "Production-grade LinkedIn job scraper with anti-detection, structured extraction, and multi-strategy fallback."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "linkedin-job-scraper contributors" }]

dependencies = [
    "playwright>=1.40,<2",
    "beautifulsoup4>=4.12,<5",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "lxml>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
linkedin-scraper = "main:main"

[tool.hatch.build.targets.wheel]
packages = [
    "browser",
    "config",
    "data",
    "monitor",
    "scraper",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
